--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,12 +17,20 @@ body{
     text-align: right;
     /* box-sizing: content-box */
 }
-
+.disabled span{
+    pointer-events: none !important;
+    opacity: 0.7;
+}
 .modal-backdrop.fade{
     display : none !important;
 }
 .navbar.fixed-top{
     z-index: unset !important;
+}
+.add-btn{
+    width: 40px;
+    height: 40px;
+    margin-left:10px;
 }
 
 /* scrollbars ------------------ */
