--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -84,7 +84,11 @@ body{
 .hoverable_text:hover{
     text-shadow: 0 0 3px black;
 }
-
+.btn-back{
+    position: absolute;
+    left:20px;
+    top :20px;
+}
 .hoverable{
     transition: all 200ms ease;
 }
@@ -93,10 +97,11 @@ body{
 }
 
 .chips_elem{
-    background: #bde7db;
+    background: #d5d8db;
     border-radius: 5rem;
     padding: 0.2rem 0.5rem;
     margin-left: 3px;
+
     white-space: nowrap;
 }
 .mypad{
@@ -364,7 +369,7 @@ td , th {
 .dashboard_card{
     border: unset !important;
     border-radius: unset !important;
-    box-shadow: 0 0 4px gray;
+    box-shadow: 0 0 4px hwb(0 50% 50%);
     cursor: pointer;
     transition: all 300ms ease;
 }
@@ -414,4 +419,31 @@ td , th {
 }
 
 
+.multi_select_items_content{
+    position: absolute;
+    background: white;
+    width: 100%;
+    right: 0;
+    top: 38px;
+    z-index: 1;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    box-shadow: -1px 7px 15px grey;
+}
+
+.multi_select_items_content .multi_select_items{
+    padding: 2px 10px 2px 0;
+}
+
+.multi_select_items_content .multi_select_items:hover{
+    background-color: #3186e7;
+    color: white;
+}
+.label-description{
+    background-color:#e0e8f0;
+    border : 1px solid  #ced4da;
+    font-size: 1rem;
+    
+}
 /* content end-------<<<<<<< */
+
